# insp_panels

./: CMakeLists.txt  README.md  package.xml
action/: FollowLine.action  GoPose.action
scripts/: Lyapunov_drone_controller.py  NON_LIN_drone_controller.py  PID_drone_controller.py  UDP_server_vel.py  cmd_vel_publisher.py  command_publisher.py  control_errors  data_capture.py  data_vis_nonlin.csv  detectron2_ros.py  detectron2_ros_101.py  detectron2_ros_50.py  drone_controller_position.py  drone_controller_simulation.py  drone_controller_simulation_1.py  line_client.py  line_detection.py  line_server.py  move_drone_client.py  pc_drone_controller.py  position_client.py  position_server.py  position_server_3.py  visual_servo_drone_controller.py  visual_servo_drone_controller_lab.py  visual_servo_drone_controller_lab_m.py  visual_servoing_server.py  visual_servoing_server_ang.py
scripts/detectron_files/: detectron2_ros_50.py
scripts/server_client_control/: line_server.py  line_server_ang.py  position_server_2.py  trajectory_tracking.py
